--- a/.github/workflows/build-examples-gh-pages-on-push.yml
+++ b/.github/workflows/build-examples-gh-pages-on-push.yml
@@ -36,24 +36,7 @@ concurrency:
 jobs:
   job1:
     runs-on: ubuntu-latest
-    container: espressif/idf:release-v5.1
-    strategy:
-      matrix:
-        build-dir: [
-          'chatgpt_demo',
-          'factory_demo',
-          'image_display',
-          'lv_demos',
-          'mp3_demo',
-          'usb_camera_lcd_display',
-          'usb_headset',
-          'watering_demo']
-        boards: ['sdkconfig.ci.box', 'sdkconfig.ci.box-lite', 'sdkconfig.ci.box-3']
-        exclude:
-          - boards: sdkconfig.ci.box-lite
-            build-dir: usb_camera_lcd_display
-          - boards: sdkconfig.ci.box
-            build-dir: usb_camera_lcd_display
+
     steps:
       - uses: actions/checkout@v3
         with:
@@ -62,57 +45,7 @@ jobs:
       - name: Build examples
         shell: bash
         run: |
-          . $IDF_PATH/export.sh
-          pip install --upgrade idf-component-manager
-          pip install "idf_build_apps<2.0"
-
-          cd $GITHUB_WORKSPACE/examples/${{matrix.build-dir}}
-          # diff sdkconfig.defaults ${{matrix.boards}} | grep '^>' | sed 's/^> *//' | grep -v '^#' | sed 's/.*/\n&/' >> sdkconfig.defaults
-          comm -23 <(grep -v '^#' ${{matrix.boards}} | sort) <(grep -v '^#' sdkconfig.defaults | sort) | sed 's/.*/\n&/' >> sdkconfig.defaults
-
-          if [[ ${{matrix.build-dir}} == chatgpt_demo ]]; then
-            cd factory_nvs
-            comm -23 <(grep -v '^#' ${{matrix.boards}} | sort) <(grep -v '^#' sdkconfig.defaults | sort) | sed 's/.*/\n&/' >> sdkconfig.defaults
-            idf.py build
-            cd ../
-          fi
-
-          idf.py build
-          cd build
-          esptool.py --chip esp32s3 merge_bin -o "$GITHUB_WORKSPACE/images/${{matrix.build-dir}}_${{matrix.boards}}.bin" @flash_args
-
-      - name: Upload artifact
-        uses: actions/upload-artifact@v3
-        with:
-          name: build-images
-          path: images/
-
-  job2:
-    runs-on: ubuntu-latest
-    container: espressif/esp-matter:latest_idf_v5.1.1
-    strategy:
-      matrix:
-        build-dir: ['matter_switch']
-        boards: ['sdkconfig.ci.box', 'sdkconfig.ci.box-lite', 'sdkconfig.ci.box-3']
-    steps:
-      - uses: actions/checkout@v3
-        with:
-          submodules: 'recursive'
-      - run: mkdir -p images
-      - name: Build examples
-        shell: bash
-        run: |
-          . $IDF_PATH/export.sh
-          . $ESP_MATTER_PATH/export.sh
-          pip install --upgrade idf-component-manager
-          pip install "idf_build_apps<2.0"
-
-          cd $GITHUB_WORKSPACE/examples/${{matrix.build-dir}}
-          comm -23 <(grep -v '^#' ${{matrix.boards}} | sort) <(grep -v '^#' sdkconfig.defaults | sort) | sed 's/.*/\n&/' >> sdkconfig.defaults
-
-          idf.py set-target esp32s3 build
-          cd build
-          esptool.py --chip esp32s3 merge_bin -o "$GITHUB_WORKSPACE/images/${{matrix.build-dir}}_${{matrix.boards}}.bin" @flash_args
+          mv $GITHUB_WORKSPACE/bin/*.bin $GITHUB_WORKSPACE/images/
 
       - name: Upload artifact
         uses: actions/upload-artifact@v3
@@ -121,7 +54,7 @@ jobs:
           path: images/
 
   deploy:
-    needs: [job1, job2]
+    needs: [job1]
 
     environment:
       name: github-pages
@@ -142,7 +75,9 @@ jobs:
       - name: generate launchpad config
         run: |
           cd images/
-          mv $GITHUB_WORKSPACE/bin/*.bin ./
+          # mv $GITHUB_WORKSPACE/bin/*.bin ./
+          $GITHUB_WORKSPACE/tools/launchpad/rename.sh $GITHUB_WORKSPACE
+          $GITHUB_WORKSPACE/tools/launchpad/generate_launchpad_config.sh $GITHUB_REPOSITORY
 
       - name: Setup Pages
         uses: actions/configure-pages@v2
